# resources

./: Cargo.toml
resource_macros/: Cargo.toml
resource_macros/src/: attributes.rs  lib.rs
src/: error.rs  lib.rs
