[package]
name = "resource"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "resource"
path = "src/lib.rs"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["json", "runtime-tokio-rustls", "postgres", "sqlite", "any"] }
resource_macros = { version = "0.1.0", path = "resource_macros"}

[dev-dependencies]
tokio-test = "*"
